assets/scss/overrides/_tailwind.scss
@tailwind base;
@tailwind components;
@tailwind utilities;
@tailwind screens;

@layer base {
  html {
    font-family: "Montserrat", ui-sans-serif;
    font-weight: 300;
    @apply bg-bckg;
    @apply text-black;
  }
  p {
    a {
      @apply text-blue;
    }
  }
}

